# Department-Website

./: .gitignore  LICENSE.md  MICRO_DOKKU_SCALE  MicroProcfile  Pipfile  Procfile  Readme.md  ansible.cfg  app.json  db.sqlite3  dokku-setup.yml  pyproject.toml  registrations.xls
.github/workflows/: deploy.yml  microservice.yml  production.yml
assets/css/: style.css  typography.css
assets/js/: app.js  functions.js
core/: __init__.py  celery.py  hosts.py  settings.py  urls.py
media/: all-registrations.xls
media/alpha/: alpha-registrations.xls
static/css/: assets.css  style.css
static/js/: app.js  functions.js
templates/: 404.html  about-1.html  about-2.html  about.html  alumni.html  contact-1.html  course-details.html  courses-details.html  courses.html  error-404.html  event-details.html  event.html  events-details.html  events.html  faculty-lazyload.html  gallery.html  index-2.html  index.html  login.html  portfolio.html  profile.html  register.html
templates/dashboard/: details.html  events.html  index.html  payment_status.html  paytm_payments.html  registration.html  schedule.html  user-profile.html
templates/includes/: loader.html
templates/layouts/: base.html
utils/: discord_handler.py  functions.py  google_oauth2.py  hashing.py  html_message.py  mixins.py  operations.py  payment_handler.py  payments.py  paytm_checksum.py  signals.py
web/: admin.py  dash_views.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_alter_event_link.py  0003_auto_20210617_1703.py  0003_course_markdown_content.py  0004_auto_20210617_1719.py  (+27 more)
(+151 files in other folders)
